--- a/_config.yml
+++ b/_config.yml
@@ -30,13 +30,13 @@ collections: [sections]
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-subtitle: Your awesome subtitle
+title: Saif's Portfolio
+subtitle: Product Purist
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
-author: Your Incredible Name
-email: your-email@example.com
+author: Saif Ali Athyaab
+email: noblesword98@gmail.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
@@ -50,7 +50,7 @@ facebook_url:
 googleplus_url:
 instagram_url:
 linkedin_url: https://www.linkedin.com/in/saifathyaab
-github_url:
+github_url: https://github.com/noblesword
 stackoverflow_url:
 pinterest_url:
 slack_url:
